--- a/index.html
+++ b/index.html
@@ -22,7 +22,32 @@
                     <li>Login</li>
                 </ul>
             </nav>
+            <div class="banner">
+                <h2 class="banner-title">Brand New <br>
+                    Group of Architects 
+                </h2>
+                <p class="banner-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn">Explore More</button>
+                <img class="banner-img" src="images/banner.png" alt="">
+
+            </div>
         </div>
     </header>
+    <!--feature section-->
+    <section class="container">
+        <div class="features">
+            <div class="feature-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team1.png" alt="">
+                <img src="images/team1.png" alt="">
+                <img src="images/team1.png" alt="">
+            </div>
+            <div class="feature-main">
+                <h2 class="feature-title"><span style="color: #727272;">Quick list</span> <span style="color: #131313;">of Our</span> <span style="color: #FF900E;">Features</span></h2>
+                <p class="feature-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn">Explore More</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
