--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h2 class="banner-title">Brand New <br>
                     Group of Architects 
                 </h2>
-                <p class="banner-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="banner-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn">Explore More</button>
                 <img class="banner-img" src="images/banner.png" alt="">
 
@@ -135,5 +135,21 @@
         </div>
 
     </section>
+    <!--bonus sextion-->
+    <section class="bonus">
+        <div class="banner">
+            <h2 class="banner-title">THE FUTURE OF <br>
+                MOBILITY IS HERE
+            </h2>
+            <p class="banner-desc">Discover the safest self-driving experience with Autono.</p>
+                
+        </div>
+    </section>
+    <!--footer-->
+    <footer class="container">
+        <div class="footer">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </footer>
 </body>
 </html>
