--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
                     <p class="extra-desc">Award Winning</p>
                 </div>
                 <div class="awards">
-                    <img src="images/icons/ribon.png" alt="">
-                    <p class="number">54</p>
-                    <p class="extra-desc">Award Winning</p>
+                    <img src="images/icons/projects.png" alt="">
+                    <p class="number">1458</p>
+                    <p class="extra-desc">Project Finished</p>
                 </div>
                 <div class="awards">
-                    <img src="images/icons/ribon.png" alt="">
-                    <p class="number">54</p>
-                    <p class="extra-desc">Award Winning</p>
+                    <img src="images/icons/customers.png" alt="">
+                    <p class="number">590</p>
+                    <p class="extra-desc">Clients Worked</p>
                 </div>
                 <div class="awards">
-                    <img src="images/icons/ribon.png" alt="">
-                    <p class="number">54</p>
-                    <p class="extra-desc">Award Winning</p>
+                    <img src="images/icons/email.png" alt="">
+                    <p class="number">22578</p>
+                    <p class="extra-desc">Email Send</p>
                 </div>
             </div>
         </div>
