--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="header">
         <div class="container">
             <nav>
-                <h1>G3 Architects</h1>
-                <ul>
+                <h1 class="ar">G3 Architects</h1>
+                <ul class="link">
                     <li>Home</li>
                     <li>About</li>
                     <li>Contact Us</li>
@@ -56,7 +56,7 @@
                 <div class="feature-line">
                 
                     <h2 class="extra-title">Features you will love & enjoy</h2>
-                    <p class="extra-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <p class="love">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
 
                 </div>
                 <div class="version">
@@ -91,28 +91,28 @@
         <div class="factss">
             <div class="facts">
                 <h2 class="facts-title">Some Facts</h2>
-                <p class="extra-desc fact">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p class="fact">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             </div>
             <div class="client-work">
                 <div class="awards">
                     <img src="images/icons/ribon.png" alt="">
                     <p class="number">54</p>
-                    <p class="extra-desc">Award Winning</p>
+                    <p class="serve">Award Winning</p>
                 </div>
                 <div class="awards">
                     <img src="images/icons/projects.png" alt="">
                     <p class="number">1458</p>
-                    <p class="extra-desc">Project Finished</p>
+                    <p class="serve">Project Finished</p>
                 </div>
                 <div class="awards">
                     <img src="images/icons/customers.png" alt="">
                     <p class="number">590</p>
-                    <p class="extra-desc">Clients Worked</p>
+                    <p class="serve">Clients Worked</p>
                 </div>
                 <div class="awards">
                     <img src="images/icons/email.png" alt="">
                     <p class="number">22578</p>
-                    <p class="extra-desc">Email Send</p>
+                    <p class="serve">Email Send</p>
                 </div>
             </div>
         </div>
